name:                Pi-Lock
version:             0.1.0.0
copyright:           2016 Christopher King
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     KeyManagement
  build-depends:       base >= 4.7 && < 5, bytestring, hinotify, unix
  default-language:    Haskell2010
